# acdc-exploratory-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: demo_analysis_in_gen3.py  exploratory.py  minimal.ipynb  minimal.py  pipeline.py
scripts/: correlations.py  explore.py  flatten.py  missingness.py  table_one.py
